Switch search command to ues buttons